Finalized all Functions

--- a/block27/src/App.css
+++ b/block27/src/App.css
@@ -5,38 +5,25 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  justify-content: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  text-decoration: underline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+button {
+  box-shadow: 5px 5px 5px grey;
 }
 
-.card {
-  padding: 2em;
+button:hover {
+  box-shadow: 3px 3px 3px grey;
 }
 
-.read-the-docs {
-  color: #888;
+button:active {
+  box-shadow: 1px 1px 1px grey;
 }
